--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "public/index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "Ahmed Haque",
+  "author": "Josh Carroll",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.12.0",
@@ -25,5 +26,8 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "webpack": "^1.13.1"
+  },
+  "engines": {
+    "node": "5.11.0"
   }
 }
